# fastcontext-agent-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EVALUATION.md  REPORT.md  mcp.ja.md  mcp.zh-TW.md
evaluation/: endpoint_readiness.py  local-endpoint-readiness.json  local-official-benchmark-readiness.json  local-official-serving-preflight.json  mcp_smoke.py  official_benchmark_datasets.py  official_benchmark_readiness.py  official_serving_preflight.py  render_summary.py  run_wrapper_eval.py  wrapper-eval.json
examples/: mcp-config.json
skills/fastcontext-explorer/: SKILL.md
skills/fastcontext-explorer/agents/: openai.yaml
skills/fastcontext-explorer/references/: fastcontext-setup.md
src/fastcontext_mcp/: __init__.py  __main__.py  fastcontext_cli.py  runtime.py  server.py
tests/: test_endpoint_readiness.py  test_official_benchmark_readiness.py  test_official_serving_preflight.py  test_server.py
