[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fastcontext-agent-tools"
version = "0.1.0"
description = "MCP server and Codex skill for using Microsoft FastContext as a repository exploration subagent."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jakevin" }
]
keywords = ["mcp", "fastcontext", "coding-agent", "repository-exploration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]
dependencies = []

[project.scripts]
fastcontext-mcp = "fastcontext_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastcontext_mcp"]

